--- a/src/components/ui/cover/Cover.astro
+++ b/src/components/ui/cover/Cover.astro
@@ -85,9 +85,7 @@ const bannerLqipStyle = getLqipStyle('/img/site_header_1920.webp');
     id="banner-box"
     style={bannerLqipStyle}
   >
-    <Image
-      width={1920}
-      height={1080}
+    <img
       src="/img/site_header_1920.webp"
       alt="cover"
       class="h-full w-full object-cover"
