--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,7 @@
 @import './theme/shadcn.css';
 @import './theme/index.css';
 @import './theme/theme-transition.css';
+@import './christmas/christmas-theme.css';
 @import './global/animate.css';
 @import './global/tailwind.css';
 
