feat: enhance snowfall effects with layered rendering and parallax support

--- a/src/components/christmas/ChristmasEffects.astro
+++ b/src/components/christmas/ChristmasEffects.astro
@@ -7,11 +7,25 @@ const { snowfall } = christmasConfig;
 
 {
   christmasConfig.enabled && christmasConfig.features.snowfall && (
-    <SnowfallCanvas
-      client:only="react"
-      speed={snowfall.speed}
-      intensity={snowfall.intensity}
-      mobileIntensity={snowfall.mobileIntensity}
-    />
+    <>
+      {/* 背景雪 - 在内容后面 */}
+      <SnowfallCanvas
+        client:only="react"
+        speed={snowfall.speed}
+        intensity={snowfall.intensity}
+        mobileIntensity={snowfall.mobileIntensity}
+        zIndex={1}
+        layerRange={[0, 2]}
+      />
+      {/* 前景雪 - 在内容前面 */}
+      <SnowfallCanvas
+        client:only="react"
+        speed={snowfall.speed}
+        intensity={snowfall.intensity}
+        mobileIntensity={snowfall.mobileIntensity}
+        zIndex={50}
+        layerRange={[3, 5]}
+      />
+    </>
   )
 }
