--- a/src/components/common/CustomContent.astro
+++ b/src/components/common/CustomContent.astro
@@ -3,6 +3,8 @@ import type { ContentConfig } from '@constants/content-config';
 import type { AstroComponentFactory } from 'astro/runtime/server/index.js';
 import { defaultContentConfig } from '@constants/content-config';
 import EmbedHydrator from '@components/embed/EmbedHydrator';
+import { cn } from '@/lib/utils';
+import { christmasConfig } from '@/constants/site-config';
 
 interface Props {
   Content: AstroComponentFactory;
@@ -13,7 +15,10 @@ const { Content, config = {} } = Astro.props;
 const finalConfig = { ...defaultContentConfig, ...config };
 ---
 
-<div class="custom-content" data-config={JSON.stringify(finalConfig)}>
+<div
+  class:list={['custom-content', { 'relative z-5': christmasConfig.enabled && christmasConfig.features.snowfall }]}
+  data-config={JSON.stringify(finalConfig)}
+>
   <Content />
 </div>
 
