feat: add Christmas lights and ornament toggle components for festive decoration

--- a/src/components/christmas/ChristmasEffects.astro
+++ b/src/components/christmas/ChristmasEffects.astro
@@ -10,7 +10,7 @@ const { snowfall } = christmasConfig;
     <>
       {/* 背景雪 - 在内容后面 */}
       <SnowfallCanvas
-        client:only="react"
+        client:idle
         speed={snowfall.speed}
         intensity={snowfall.intensity}
         mobileIntensity={snowfall.mobileIntensity}
@@ -19,7 +19,7 @@ const { snowfall } = christmasConfig;
       />
       {/* 前景雪 - 在内容前面 */}
       <SnowfallCanvas
-        client:only="react"
+        client:idle
         speed={snowfall.speed}
         intensity={snowfall.intensity}
         mobileIntensity={snowfall.mobileIntensity}
