--- a/src/components/ui/cover/Cover.astro
+++ b/src/components/ui/cover/Cover.astro
@@ -91,6 +91,9 @@ const bannerLqipStyle = getLqipStyle('/img/site_header_1920.webp');
       class="h-full w-full object-cover"
       sizes="50vw"
       srcset="/img/site_header_800.webp 800w,/img/site_header_1920.webp 1200w"
+      loading="eager"
+      fetchpriority="high"
+      decoding="async"
     />
   </div>
   <WaveSvg />
