--- a/src/components/post/PostItemCard.astro
+++ b/src/components/post/PostItemCard.astro
@@ -54,10 +54,10 @@ const lqipProps = getLqipProps(finalCover);
 ---
 
 <div
-  class:list={[
+  class={cn(
     'hover:shadow-card-darker group text-card-foreground shadow-card relative flex gap-2 rounded-lg bg-white transition-shadow md:flex-col dark:bg-transparent',
-    { 'z-5': christmasConfig.enabled && christmasConfig.features.snowfall },
-  ]}
+    { 'relative z-5 dark:bg-[#1a1512]': christmasConfig.enabled && christmasConfig.features.snowfall },
+  )}
 >
   {
     !hideCover && (
