--- a/src/components/christmas/ChristmasEffects.astro
+++ b/src/components/christmas/ChristmasEffects.astro
@@ -14,8 +14,12 @@ const { snowfall } = christmasConfig;
         speed={snowfall.speed}
         intensity={snowfall.intensity}
         mobileIntensity={snowfall.mobileIntensity}
+        maxLayers={snowfall.maxLayers}
+        maxIterations={snowfall.maxIterations}
+        mobileMaxLayers={snowfall.mobileMaxLayers}
+        mobileMaxIterations={snowfall.mobileMaxIterations}
         zIndex={1}
-        layerRange={[0, 2]}
+        layerPosition="background"
       />
       {/* 前景雪 - 在内容前面 */}
       <SnowfallCanvas
@@ -23,8 +27,12 @@ const { snowfall } = christmasConfig;
         speed={snowfall.speed}
         intensity={snowfall.intensity}
         mobileIntensity={snowfall.mobileIntensity}
+        maxLayers={snowfall.maxLayers}
+        maxIterations={snowfall.maxIterations}
+        mobileMaxLayers={snowfall.mobileMaxLayers}
+        mobileMaxIterations={snowfall.mobileMaxIterations}
         zIndex={50}
-        layerRange={[3, 5]}
+        layerPosition="foreground"
       />
     </>
   )
