--- a/src/components/post/PostItemCard.astro
+++ b/src/components/post/PostItemCard.astro
@@ -156,18 +156,20 @@ const lqipProps = getLqipProps(finalCover);
         >
           {data?.data.tags?.length
             ? data?.data.tags.map((tag: string, index: number) => (
-                <Badge
-                  className={cn(
-                    'hover:text-badge-primary/80 hidden cursor-pointer gap-0.5 border-none px-1 text-xs font-bold whitespace-nowrap transition-colors duration-300 @md:flex',
-                    {
-                      '@xs:flex': index < 2,
-                      '@sm:flex': index < 3,
-                    },
-                  )}
-                  variant="outline"
-                >
-                  <Icon name="fa6-solid:tags" /> {tag}
-                </Badge>
+                <a href={`/tags/${tag.replace(/\//g, '-')}`}>
+                  <Badge
+                    className={cn(
+                      'hover:text-badge-primary/80 hidden cursor-pointer gap-0.5 border-none px-1 text-xs font-bold whitespace-nowrap transition-colors duration-300 @md:flex',
+                      {
+                        '@xs:flex': index < 2,
+                        '@sm:flex': index < 3,
+                      },
+                    )}
+                    variant="outline"
+                  >
+                    <Icon name="fa6-solid:tags" /> {tag}
+                  </Badge>
+                </a>
               ))
             : null}
         </div>
