--- a/src/components/ui/cover/Cover.astro
+++ b/src/components/ui/cover/Cover.astro
@@ -16,7 +16,7 @@ export interface CoverProps {
 
 const { data, title } = Astro.props as CoverProps;
 
-const { date, title: dataTitle, draft } = data?.data ?? {};
+const { date, updated, title: dataTitle, draft } = data?.data ?? {};
 
 const readState = readingTime(data?.body ?? '');
 const isDraft = import.meta.env.DEV && draft === true;
@@ -55,11 +55,17 @@ const bannerLqipStyle = getLqipStyle('/img/site_header_1920.webp');
             )}
           </h1>
           {data && (
-            <p class="mt-3 flex items-center justify-center gap-4 md:text-xs">
+            <p class="mt-3 flex flex-wrap items-center justify-center gap-4 md:text-xs">
               <span class="flex items-center gap-1">
                 <Icon name="fa6-solid:calendar-days" />
-                发表于 {parseDate(date ?? '', 'YYYY-MM-DD')}
+                发表于 {parseDate(date ?? '', 'YYYY-MM-DD hh:mm')}
               </span>
+              {updated && (
+                <span class="flex items-center gap-1">
+                  <Icon name="fa6-solid:calendar-days" />
+                  更新于 {parseDate(updated, 'YYYY-MM-DD hh:mm')}
+                </span>
+              )}
               <span class="flex items-center gap-1">
                 <Icon name="fa6-solid:pen-nib" /> {readState?.words} 字
               </span>
